--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -1,9 +1,12 @@
+@import 'elements/animation';
+
 
 @import 'view/edit-media';
 @import 'view/other-media';
 @import 'view/list-item';
 @import 'view/modal';
 @import 'view/debug';
+
 
 // General Styles ( mostly from style.css )
 
