--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -1,6 +1,7 @@
 .shortpixel-bulk-wrapper
 {
 	@import 'elements/colors';
+	@import 'elements/animation';
 
   /** GENERAL STYLES **/
     h1 {
@@ -590,31 +591,8 @@
               margin-right: 20px;
             }
             img {
-              animation: cssload-spin 5000ms infinite linear;
-                      -o-animation: cssload-spin 5000ms infinite linear;
-                      -ms-animation: cssload-spin 5000ms infinite linear;
-                      -webkit-animation: cssload-spin 5000ms infinite linear;
-                      -moz-animation: cssload-spin 5000ms infinite linear;
-            }
-            @keyframes loading-spin {
-              100%{ transform: rotate(360deg); transform: rotate(360deg); }
-            }
-
-            @-o-keyframes loading-spin {
-              100%{ -o-transform: rotate(360deg); transform: rotate(360deg); }
-            }
-
-            @-ms-keyframes loading-spin {
-              100%{ -ms-transform: rotate(360deg); transform: rotate(360deg); }
-            }
-
-            @-webkit-keyframes loading-spin {
-              100%{ -webkit-transform: rotate(360deg); transform: rotate(360deg); }
-            }
-
-            @-moz-keyframes loading-spin {
-              100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
-            }
+								@include loadspinner;
+						}
          }
       }
 
