--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -153,21 +153,20 @@
 }
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .optimize-bar {
   float: right;
-  width: 110px;
   margin-left: 8px;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 10px;
+  margin-top: 4px;
 }
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .optimize-bar .point {
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
   display: inline-block;
-  border: 1px solid #ccc;
-  margin-left: 1px;
-  background: #ccc;
-  vertical-align: middle;
+  background: #d6d8d9;
 }
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .optimize-bar .point.checked {
-  background: green;
-  box-shadow: 1px 1px 1px green;
+  background: #1abdca;
 }
 .sp-column-info .thumbnails.optimized:hover .thumb-wrapper {
   display: block;
