--- a/res/scss/shortpixel-notices.scss
+++ b/res/scss/shortpixel-notices.scss
@@ -14,16 +14,13 @@
    box-shadow: 0 1px 1px rgba(0,0,0,0.04);
    border: 1px solid #c3c4c7;
    margin: 15px 0;
+  border-left-width: 4px;
    border-left-color: #72aee6;
    position: relative;
 
    img
    {
     // max-height: 50px;
-   }
-   .notice-dismiss
-   {
-     margin-top: 10px;
    }
    span
    {
