--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -63,11 +63,12 @@
 	    .spio-status-box {
 			text-align: center;
 			position: absolute;
-			top: -40px;
+			top: -49px;
 			right: 0;
 			padding: 5px 10px;
 			background: white;
 			box-shadow: 0 3px 3px rgba(0,0,0,0.1);
+			z-index: 1;
 		}
 		.pie-wrapper
 		{
