--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -641,6 +641,11 @@
            .number {
                font-weight: 700;
            }
+					 &.warning {
+						 border-left: 4px solid #dba617;
+						 padding-left: 8px;
+						 color: #000;
+					 }
         }
 
       }
