--- a/res/scss/shortpixel-notices.scss
+++ b/res/scss/shortpixel-notices.scss
@@ -35,6 +35,8 @@
 		 {
 		//	 width: 50%;
 			 padding: 8px 0;
+			 word-wrap: break-word;
+			 overflow: hidden;
 		 }
    }
    .details-wrapper // open close mechanic.
