Tweak - applied cutoffs so interface doesn't show the whole list of images to optimize if more than 10. Tweak - cutoff to optimized images. Shows the 15 most optimized thumbs in the mouse-over instead of all Tweak - Getting the image-to-optimize counter info now done more efficient.

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -168,6 +168,9 @@
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .optimize-bar .point.checked {
   background: #1abdca;
 }
+.sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .cutoff {
+  float: right;
+}
 .sp-column-info .thumbnails.optimized:hover .thumb-wrapper {
   display: block;
 }
