--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -53,6 +53,9 @@
                       }
                    }
               }
+							.cutoff {
+								 float:right;
+							}
          }
       } // wrapper
       &:hover {
