--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -740,12 +740,13 @@
   font-size: 13px;
   position: absolute;
   bottom: 45px;
-  left: 0;
+  left: -15px;
   padding: 6px 10px;
   color: #fff;
   background: rgba(15, 106, 125, 0.5);
   font-weight: 700;
   border-radius: 3px;
+  white-space: nowrap;
 }
 .shortpixel-bulk-wrapper section.panel.process .average-optimization .opt-circle-average, .shortpixel-bulk-wrapper section.panel.finished .average-optimization .opt-circle-average {
   width: 150px;
