--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -849,12 +849,13 @@
 				//	width: 100%;
 
 					bottom: 45px;
-					left: 0;
+					left: -15px;
 					padding: 6px 10px;
 					color: #fff;
 					background: rgba($color-darkest, 0.5);
 					font-weight: 700;
 					border-radius: 3px;
+					white-space: nowrap;
 
         }
         .opt-circle-average {
