--- a/res/css/shortpixel-notices.css
+++ b/res/css/shortpixel-notices.css
@@ -1,28 +1,33 @@
 .shortpixel.shortpixel-notice {
-  min-height: 75px;
+  /*min-height: 75px;
   padding: 8px;
   display: flex;
   align-items: center;
   background: #fff;
   padding: 1px 12px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
   border: 1px solid #c3c4c7;
   margin: 15px 0;
   border-left-width: 4px;
   border-left-color: #72aee6;
-  position: relative;
-}
-.shortpixel.shortpixel-notice span {
-  vertical-align: middle;
-}
-.shortpixel.shortpixel-notice span.icon {
-  margin: 0 25px 0 0;
-  width: 80px;
-}
-.shortpixel.shortpixel-notice span.content {
-  padding: 8px 0;
-  word-wrap: break-word;
-  overflow: hidden;
+  position: relative; */
+  /*span
+   {
+     vertical-align: middle;
+     &.icon {
+       //float: left;
+       margin: 0 25px 0 0;
+  	 width: 80px;
+      // display: inline-block;
+     }
+   &.content
+   {
+  //	 width: 50%;
+  	 padding: 8px 0;
+  	 word-wrap: break-word;
+  	 overflow: hidden;
+   }
+   } */
 }
 .shortpixel.shortpixel-notice .details-wrapper {
   margin: 8px 0 4px 0;
