--- a/res/scss/shortpixel-notices.scss
+++ b/res/scss/shortpixel-notices.scss
@@ -5,7 +5,7 @@
 {
 
    //padding: 18px;
-   min-height: 75px;
+   /*min-height: 75px;
    padding: 8px;
    display: flex;
    align-items: center;
@@ -14,15 +14,11 @@
    box-shadow: 0 1px 1px rgba(0,0,0,0.04);
    border: 1px solid #c3c4c7;
    margin: 15px 0;
-  border-left-width: 4px;
+   border-left-width: 4px;
    border-left-color: #72aee6;
-   position: relative;
+   position: relative; */
 
-   img
-   {
-    // max-height: 50px;
-   }
-   span
+   /*span
    {
      vertical-align: middle;
      &.icon {
@@ -38,7 +34,7 @@
 			 word-wrap: break-word;
 			 overflow: hidden;
 		 }
-   }
+   } */
    .details-wrapper // open close mechanic.
    {
       margin: 8px 0 4px 0;
