--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -67,9 +67,8 @@
   }
   .sp-column-actions
   {
-     position: absolute;
-     right: 10px;
-     top: 0;
+
+		 margin: 10px;
   }
   .thumbs-todo
   {
