--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -1,3 +1,76 @@
+.sp-column-info {
+  /* Dropdown Content (Hidden by Default) */
+  /* Links inside the dropdown */
+  /* Change color of dropdown links on hover */
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+}
+.sp-column-info .sp-column-actions {
+  max-width: 140px;
+  float: right;
+  text-align: right;
+}
+.sp-column-info .sp-column-actions .button.button-smaller {
+  margin-right: 0px;
+}
+.sp-column-info .button.button-smaller {
+  font-size: 13px;
+  padding: 0px 5px;
+  margin-bottom: 4px;
+  min-height: 30px;
+  float: right;
+}
+.sp-column-info .sp-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.sp-column-info .sp-dropbtn.button {
+  box-sizing: content-box;
+  padding: 0 5px;
+  font-size: 20px;
+  line-height: 20px;
+  /*background-color: #4CAF50;
+  color: white;
+  border: none;*/
+  cursor: pointer;
+}
+.sp-column-info .sp-dropdown-content {
+  display: none;
+  right: 0;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.sp-column-info .rtl .sp-dropdown-content {
+  right: auto;
+  left: 0;
+}
+.sp-column-info .sp-dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.sp-column-info .sp-dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.sp-column-info .sp-dropdown.sp-show .sp-dropdown-content {
+  display: block;
+}
+
+/*
+.wp-core-ui .column-wp-shortPixel .sp-column-actions
+.wp-core-ui .column-wp-shortPixel
+.wp-core-ui.rtl .column-wp-shortPixel .sp-column-actions,
+.wp-core-ui.rtl .column-wp-shortPixel .button.button-smaller{
+    float:left;
+}
+
+th.sortable.column-wp-shortPixel a,
+th.sorted.column-wp-shortPixel a {
+    display: inline-block;
+}*/
 .view-edit-media a.debugModal {
   margin: 20px 0;
   display: inline-block;
@@ -175,9 +248,7 @@
   display: block;
 }
 .sp-column-info .sp-column-actions {
-  position: absolute;
-  right: 10px;
-  top: 0;
+  margin: 10px;
 }
 .sp-column-info .thumbs-todo {
   position: relative;
