--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -12,6 +12,92 @@
 	p {
 		font-size: 14px;
 	}
+
+
+	.clearfix {
+	    zoom: 1;
+			&:before, &:after {
+				content: " ";
+		    display: table;
+			}
+			&:after {
+				clear: both;
+			}
+	}
+
+	.form-table {
+		th {
+	    width: 220px;
+		}
+		td {
+		    position: relative;
+		}
+	}
+
+	.shortpixel-key-valid {
+	    font-weight: bold;
+			.dashicons-yes:before {
+			    font-size: 2em;
+			    line-height: 25px;
+			    color: #3485ba;
+			    margin-left: -20px;
+			}
+	}
+
+
+	/* TABS CONTROLS */
+	article.sp-tabs {
+	    position: relative;
+	    display: block;
+	    width: 100%;
+	    /*height: 1100px;*/
+	    margin: 2em auto;
+
+			section {
+			    position: absolute;
+			    display: block;
+			    top: 1.8em;
+			    left: 0;
+			    /*height: 1100px;*/
+			    width: 100%;
+			    max-width: 100%;
+			    box-sizing: border-box;
+			    padding: 10px 20px;
+			    /*background-color: #ddd;*/
+			    /* border-radius: 5px; */
+			    z-index: 0;
+					&.sel-tab {
+					    position: relative;
+					    box-shadow: 0 3px 3px rgba(0,0,0,0.1);
+							.wp-shortpixel-tab-content {
+							    visibility: visible !important;
+							}
+					}
+					.wp-shortpixel-tab-content {
+					    visibility: hidden;
+					}
+					&:first-child {
+					    z-index: 1;
+					}
+			} // section
+			section h2 a:focus, article.sp-tabs section#tab-resources a:focus {
+				 box-shadow: none;
+				 outline: none;
+		 }
+		 section.sel-tab, article.sp-tabs section.sel-tab h2 {
+	 	    color: #333;
+	 	    background-color: #fff;
+	 	    z-index: 2;
+	 	}
+		h2:before {
+		    content: none;
+		}
+	} // article
+
+	.sp-column-actions-template + .sp-column-info {
+	    display: none;
+	}
+
 	.button, button:focus
 	{
 		color: $color-darkest;
