--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -114,3 +114,31 @@
 		 }
   }
 }
+
+
+// Support for gallery view (td is annoying)
+.compat-field-shortpixel-image-optimiser
+{
+		// Don't relative to allow for overlay
+	/*	.field, .sp-column-info, .sp-dropdown  {
+			position: static;
+		}
+		*/
+		.sp-column-actions {
+			max-width: none;
+		}
+		// Don't show optimized thumbs thing at all.
+		.thumb-wrapper {
+			display: none !important;
+		}
+		.sp-dropdown.sp-show
+		{
+			.sp-dropdown-content
+			{
+					display: flex;
+					flex-direction: column;
+					position: static;
+				}
+		}
+
+}
