- Fix for Litespeed cache reset issue - Fix for Custom media new actionbar dropdown - Fix for ListViewController that could load in edit media window causing issues - Moved instance so it can't overlap on viewController

--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -141,8 +141,8 @@
   }
 }
 .shortpixel-other-media .list-overview .item .sp-column-info .sp-column-actions {
-  position: absolute;
-  right: 15px;
+  position: relative;
+  z-index: 2;
   top: 0;
 }
 @media (max-width: 1250px) {
