--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -193,8 +193,9 @@
            }
 					 .sp-column-actions
 					 {
-						  position: absolute;
-							right: 15px;
+						  position: relative;
+							z-index: 2;
+				//			right: 15px;
 							top: 0;
 					 }
          }
