--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -115,8 +115,25 @@
   }
 }
 
+/** Style for Grid view popups */
+.shortpixel-popup-info
+{
+    display: flex;
+    label {
+      min-width: 30%;
+      text-align: right;
+      margin-right: 4%;
+    }
+
+    > div { padding-left: 8px; padding-bottom: 8px; }
+
+
+
+}
+
 
 // Support for gallery view (td is annoying)
+// @todo This can probably be removed, replaced for above ^^
 .compat-field-shortpixel-image-optimiser
 {
 		// Don't relative to allow for overlay
