--- a/res/scss/elements/_actionbar.scss
+++ b/res/scss/elements/_actionbar.scss
@@ -12,14 +12,14 @@
 			    margin-right: 0px;
 			}
 		}
-		.button.button-smaller {
+		/*.button.button-smaller {
 			 font-size: 13px;
 			 padding:0px 5px;
 			 margin-bottom: 4px;
 			 min-height:30px;
 
 			 float:right;
-	 }
+	 } */
 
 	 .thumbnails.optimized
  	 {
