--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -24,6 +24,19 @@
     display: none;
   }
 }
+.shortpixel-other-media .custom-media-tabs {
+  display: block;
+  margin: 20px 0;
+}
+.shortpixel-other-media .custom-media-tabs a {
+  background: grey;
+  width: 100px;
+  margin-right: 20px;
+  padding: 15px;
+  display: inline-block;
+  color: #23282d;
+  text-align: center;
+}
 .shortpixel-other-media .list-overview {
   width: 100%;
   background: #fff;
