WIp / Custom folders

--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -22,6 +22,7 @@
   }
 
   // additional media table
+	/// @todo Remove this when custom folders move from settings 
   .shortpixel-folders-list
   {
       display: table;
