--- a/res/scss/shortpixel-folderbrowser.scss
+++ b/res/scss/shortpixel-folderbrowser.scss
@@ -5,6 +5,8 @@
     position :relative;
     border: 1px solid #000;
     margin: 8px 0;
+    max-height: 50vh;
+    overflow-y: scroll;
 
     .loading {
       background: rgba(0,0,0,0.4);
@@ -60,6 +62,9 @@
           background-repeat: no-repeat;
           background-size: 20px 20px;
         }
+        &.is_active > a {
+           color: #ccc;
+        }
     }
 
 
@@ -72,5 +77,5 @@
      display: inline-block;
      padding: 6px 0;
   }
-  
+
 }
