--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -2,7 +2,7 @@
 @import 'elements/actionbar';
 
 @import 'view/edit-media';
-@import 'view/other-media';
+//@import 'view/other-media';
 @import 'view/list-item';
 @import 'view/modal';
 @import 'view/debug';
